 Linux and FreeBSD defines 0x10f5 as E1000_DEV_ID_ICH9_IGP_M_AMT. In reality, This is not IGP but BM. Add new case to identify PHY type correctly on this device. Fixes PR#51924 reported byJarle Greipsland.

This change fix only for 0x10f5. Need more work to be the best.